fixed jumpy affix-bar

--- a/public/css/new.css
+++ b/public/css/new.css
@@ -123,7 +123,7 @@ html, body {
 
 #bottom-section {
 	
-	height: 400%;
+	height: 100%
 	width: 100%;
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -132,9 +132,15 @@ html, body {
 }
 
 .affix {
+	position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+}
+
+.addGhostDiv {
+	height: 60px;
+	content: '';
 }
 
 .second-header {
